# Digital_Geometry_Processing16

./: README.txt  TODO.txt
assets/: bunny-mesh-mat.wrl  test.wrl
src/: CMakeLists.txt  DGP2016.pro
src/core/: CMakeLists.txt  Faces.cpp  Faces.hpp  Graph.cpp  Graph.hpp  GraphTraversal.cpp  GraphTraversal.hpp  Partition.cpp  Partition.hpp  PolygonMesh.cpp  PolygonMesh.hpp  PriorityQueueFloat.cpp  PriorityQueueFloat.hpp  QueueInt.cpp  QueueInt.hpp  SplittablePartition.cpp  SplittablePartition.hpp  core.pro
src/gui/: CMakeLists.txt  GuiAboutDialog.cpp  GuiAboutDialog.hpp  GuiGLBuffer.cpp  GuiGLBuffer.hpp  GuiGLHandles.cpp  GuiGLHandles.hpp  GuiGLShader.cpp  GuiGLShader.hpp  GuiGLWidget.cpp  GuiGLWidget.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiQtLogo.cpp  GuiQtLogo.hpp  GuiStrings.hpp  GuiToolsWidget.cpp  GuiToolsWidget.hpp  GuiViewerApp.cpp  GuiViewerData.cpp  GuiViewerData.hpp  gui.pro
src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.cpp  LoaderWrl.hpp  Saver.hpp  SaverStl.cpp  SaverStl.hpp  SaverWrl.cpp  SaverWrl.hpp  StrException.hpp  Tokenizer.cpp  Tokenizer.hpp  io.pro
src/util/: BBox.cpp  BBox.hpp  CMakeLists.txt  StaticRotation.cpp  StaticRotation.hpp  util.pro
src/wrl/: Appearance.cpp  Appearance.hpp  CMakeLists.txt  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  IndexedLineSet.cpp  IndexedLineSet.hpp  Material.cpp  Material.hpp  Node.cpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp  wrl.pro
